force-app/main/default/objects/Appraisal_Objectives__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <label>Academic Year</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Achievements_Strong_Points__c</fullName>
        <label>Achievements &amp; Strong Points</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_1__c</fullName>
        <label>Action 1</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_2__c</fullName>
        <label>Action 2</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_3__c</fullName>
        <label>Action 3</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Appraisal_Date__c</fullName>
        <label>Appraisal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Areas_for_Development__c</fullName>
        <label>Areas for Development</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Appraisals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copy_Appraisal_Date__c</fullName>
        <formula>TEXT(DAY( Appraisal_Date__c )) + &quot;/&quot; + 
TEXT(MONTH( Appraisal_Date__c )) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(Appraisal_Date__c)),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Appraisal Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_End_of_Year_Review_Date__c</fullName>
        <formula>TEXT(DAY(  End_of_Year_Review_Date__c )) + &quot;/&quot; + 
TEXT(MONTH(  End_of_Year_Review_Date__c  )) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(  End_of_Year_Review_Date__c  )),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy End of Year Review Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Expected_End_of_Year_Review_Date__c</fullName>
        <formula>TEXT(DAY(  Expected_End_of_Year_Review_Date__c  )) + &quot;/&quot; + 
TEXT(MONTH(  Expected_End_of_Year_Review_Date__c )) + &quot;/&quot; + 
RIGHT(TEXT(YEAR( Expected_End_of_Year_Review_Date__c )),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Expected End of Year Review Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Expected_Mid_Year_Review_Date__c</fullName>
        <formula>TEXT(DAY(  Expected_Md_Year_Reveiew_Date__c  )) + &quot;/&quot; + 
TEXT(MONTH(  Expected_Md_Year_Reveiew_Date__c )) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(  Expected_Md_Year_Reveiew_Date__c )),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Expected Mid Year Review Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Manager_s_Email__c</fullName>
        <formula>Line_Manager__r.Email_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Manager&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Mid_Year_Review_Date__c</fullName>
        <formula>TEXT(DAY(  Mid_Year_Review_Date__c  )) + &quot;/&quot; + 
TEXT(MONTH(  Mid_Year_Review_Date__c  )) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(  Mid_Year_Review_Date__c )),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Mid-Year Review Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Staff_Email__c</fullName>
        <formula>Staff_Member__r.Email_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Staff Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_of_Year_Review_Date__c</fullName>
        <label>End of Year Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Year_Review__c</fullName>
        <label>End of Year Review</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_End_of_Year_Review_Date__c</fullName>
        <label>Expected End of Year Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Md_Year_Reveiew_Date__c</fullName>
        <label>Expected Md-Year Reveiew Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Line_Manager_Full_Name__c</fullName>
        <formula>Line_Manager__r.FirstName &amp;&quot; &quot;&amp; Line_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Manager Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Manager</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recent Subordinate Appraisals</relationshipLabel>
        <relationshipName>Appraisals_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Manager_s_Email__c</fullName>
        <description>Field is auto populated by a Workflow</description>
        <label>Line Manager&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mid_Year_Review_Date__c</fullName>
        <label>Mid Year Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mid_Year_Review_Notes__c</fullName>
        <label>Mid Year Review Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_1__c</fullName>
        <label>Objective 1</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_2__c</fullName>
        <label>Objective 2</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective_3__c</fullName>
        <label>Objective 3</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objectives_Achieved__c</fullName>
        <label>% Perfomance on Objectives</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Person_Present__c</fullName>
        <label>2nd Person Present</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>TEXT(Staff_Member__r.Owner.School__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Objective_Achieved__c</fullName>
        <formula>IF(  Objectives_Achieved__c =0,&quot;&quot;, &quot;Objectives Achieved: &quot;&amp;TEXT(Objectives_Achieved__c*100)&amp;&quot;%&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show % Objective Achieved</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Email__c</fullName>
        <label>Staff Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Staff_Member_Full_Name__c</fullName>
        <formula>Staff_Member__r.FirstName &amp;&quot; &quot;&amp; Staff_Member__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Member Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Member</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Appraisals &amp; Objectives</relationshipLabel>
        <relationshipName>Appraisals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2nd_Person_Email__c</fullName>
        <label>2nd Person Email</label>
        <type>Email</type>
    </fields>
    <label>Appraisal &amp; Objectives</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Appraisal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appraisals &amp; Objectives</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>